Fix z-index of modal dialog

--- a/resources/assets/less/bem/js-react-modal.less
+++ b/resources/assets/less/bem/js-react-modal.less
@@ -27,5 +27,5 @@
   align-items: center;
   justify-content: center;
 
-  z-index: @z-index--blackout;
+  z-index: @z-index--blackout-visible;
 }
